# Dance-Dance-MarketPlace

./: .gitignore  Commands.md  Docker-compose.yaml  Helm.md  README.md  cockroachdb.json
Auth/Janus/: DbContext.cs  Dockerfile  Janus.csproj  Janus.sln  Program.cs  appsettings.json
Auth/Janus/Controllers/: AuthController.cs
Auth/Janus/Identity/: Profile.cs  User.cs  (+2 more)
Auth/Pegasus/: Dockerfile  go.mod  go.sum  main.go
Database setup/: dockerfile  migrationsV2.sql  setup.py
Deployment/: apply.sh  destroy.sh
Deployment/Ansible/: install.yaml  manifests.yaml  uninstall.yaml
Deployment/Helm Configs/: arangodb-crd.tgz  arangodb.tgz  arangodb.yaml  argocd.yaml  cert-manager.yaml  cockroachdb.yaml  dgraph.yaml  grafana.yaml  jaeger.yaml  kafka.yaml  kiali.yaml  kong.yaml  prometheus-crd.tgz  prometheus.yaml  redis-cluster.yaml  scylla-manager.yaml  vault.yaml
Deployment/Manifests/: Graphql.yaml  Janus.yaml  Nextjs.yaml  arangodb-deployment.yaml  cert.yaml  client-secure.yaml  dbsetup.yaml  harborcred.yaml  kiali-cr.yaml  kong-ingress.yaml  nginx-ingress.yaml  prometheus-ingress.yaml  scylla-deployment.yaml  scylla-manager.yaml  scylla-operator.yaml  sql.yaml
Deployment/prometheus-crd/: Chart.yaml
Nextjs/dance-dance-marketplace/: .graphqlrc.yml  codegen.yml  dockerfile  next.config.js  package.json  tailwind.config.js
Proxy/Golang/: config.yaml  dockerfile  go.mod  go.sum  server.go
Proxy/Rust/: Cargo.toml  Dockerfile
Proxy/Rust/src/: main.rs
graphql/Golang/: dockerfile  go.mod  go.sum  gqlgen.yml  schema.graphqls  server.go
migrations/: migration.sql
(+49 files in other folders)
