[package]
name = "Proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
axum = { version = "0.5.17"}
tower = "0.4.13"
tower-http = {version = "0.3.4", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"